--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
     </nav> 
     
-    <img id="pic1" src="IMages/p1.jpg">
+    <img id="pic1" src="Images/p1.jpg">
     <p id="intro">Sci-Fi Thriller</p>
     <br>
     <p>Enter the enigmatic world of Talos I, where deception lurks around every corner. As Morgan Yu, unravel the cryptic clues you’ve left for yourself and uncover the truth about your past. Can you navigate TranStar’s hidden agenda and face the mysterious threat tearing through the station?</p>
